# blender-agent

./: .gitignore  README.md  pyproject.toml
app/: README.md  electron.vite.config.ts  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json
artist_uv_agent/: __init__.py  classification.py  debug.py  density.py  descriptors.py  gate.py  guided.py  interactive_cli.py  interactive_plan.py  layout.py  pipeline.py  region_policy.py  seam_policy.py  seam_refinement.py  seam_report.py  seams.py  segmentation.py  user_seams.py
chart_uv_agent/: __init__.py  fixtures.py  gate.py  island_layout.py  layout_optimization.py  pipeline.py  segmentation.py  shape.py  shape_repair.py  unwrap.py
docs/: ADAPTIVE_LOWPOLY_PLAN.md  ADAPTIVE_LOWPOLY_RESULTS.md  AUTO_ARTIST_UV_PLAN.md  CHART_UV_AGENT_PLAN.md  DECIMATION_MASTER_PLAN.ko.md  ELECTRON_UV_REVIEW_APP_MVP0_PRODUCTION_PLAN.ko.md  ELECTRON_UV_REVIEW_APP_MVP1_PRODUCTION_PLAN.ko.md  ELECTRON_UV_REVIEW_APP_MVP2_PRODUCTION_PLAN.ko.md  ELECTRON_UV_REVIEW_APP_MVP3_PRODUCTION_PLAN.ko.md  ELECTRON_UV_REVIEW_APP_MVP5_PRODUCTION_PLAN.ko.md  ELECTRON_UV_REVIEW_APP_PRD.ko.md  ELECTRON_UV_REVIEW_APP_PRODUCTION_READINESS_PLAN.ko.md  GENERIC_UV_REVISION_PLAN.md  GUIDED_UV_CHAPTER_PLAN.md  IMPORTANT_REGION_UV_POLICY_PLAN.ko.md  IMPORTANT_REGION_UV_POLICY_RESULTS.md  INTERACTIVE_CHAPTER_SEAM_PLAN.md  MINIMAL_DISTORTION_UV_PLAN.md  MVP0_QA_RESULTS.ko.md  MVP1_QA_RESULTS.ko.md  MVP2_QA_RESULTS.ko.md  MVP3_EXISTING_UV_REPACK_OPTIMIZATION_PLAN.ko.md  MVP3_QA_RESULTS.ko.md  MVP3_UV_BOUNDARY_FALLBACK_QA_RESULTS.ko.md  MVP5_QA_RESULTS.ko.md  (+11 more)
(+196 files in other folders)
