[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uv-agent"
version = "0.1.0"
description = "AI Direct UV Layout Agent - deterministic UV geometry engine + LLM agent layer for Blender"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=7"]
# LLM providers are optional; the engine + mock provider run without them.
llm = ["openai>=1.0"]

[project.scripts]
uv-agent-demo = "uv_agent.demo:main"

[tool.setuptools.packages.find]
include = ["uv_agent*", "retopo_agent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
